--- a/lab4.baxter/res/layout/activity_main.xml
+++ b/lab4.baxter/res/layout/activity_main.xml
@@ -18,15 +18,19 @@
         android:layout_marginTop="102dp"
         android:text="@string/welcome"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#cc0000"
         android:textSize="100sp" />
 
     <ListView
-        android:id="@+id/listView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/mainMenu"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp" >
+        android:layout_marginTop="85dp"
+        android:textAlignment="center"
+        android:textSize="40sp"
+        tools:listitem="@android:layout/simple_list_item_single_choice" >
+
     </ListView>
 
 </RelativeLayout>
